syntax = "proto3";

package Authentication;

import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

service Auth {
    //test
    rpc test(testrequest) returns (testresponse) {}

    rpc signIn(signInDetails) returns (userResponse){}
    rpc signUp(signUpDetails) returns (success) {}
    rpc createShipping(Post) returns (success) {}
    rpc getShippings(Empty) returns (responsePost) {} 
    rpc getMe(getUserRequest) returns (verifyResponse) {}
    rpc update(usernameUpdate) returns (verifyResponse) {}

}

message Empty {}

//test message
message testrequest {
    string message = 1;
}

// test end
message testresponse {
    string message = 1;
}

message signInDetails {
    string phone = 1;
    string password = 2;
}

message loginDetails {
    string email = 1;
    string password = 2;
}

message Post {
    string name = 1;
    string code = 2;
    string address = 3;
    string _id = 4;
}

message responsePost {
    string status = 1;
    string message = 2;
    repeated Post data = 3;
}

message signUpDetails {
    string phone = 1;
    string password = 2;
    string name = 3;
    string code = 4;
    repeated Post post = 5;
}

message success {
    string status = 1;
    string message = 2;
}

message userResponse {
    string status = 1;
    string token = 2;
    string message = 3;
}

message verifyResponse {
    int32 id =1;
    string name = 2;
    string phone = 3;
}

message getUserRequest {
    int32 id = 1;   
}

message usernameUpdate{
    int32 id = 1;
    string username = 2;
}